--- a/Tribute/index.html
+++ b/Tribute/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <title>Pope John Paul II
+</title>
+
 <link rel="stylesheet" href="styles.css">
+</head>
 <body>
   <main id="main">
     <h1 id="title">Pope John Paul II</h1> 
@@ -42,3 +49,4 @@
 
 </main>
 </body>
+</html>
